// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationSummary renders error icon when all istio components are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1mvcfqu"
      data-test="icon-error-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-danger"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders error icon when all istio components are valid 2`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1mvcfqu"
      data-test="icon-error-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-danger"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders error icon when all services are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1mvcfqu"
      data-test="icon-error-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-danger"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders error icon when all services are valid 2`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1mvcfqu"
      data-test="icon-error-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-danger"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders n/a when all istio components are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <div
      class="kiali_f1vp3tcb"
    >
      n/a
    </div>
  </div>
</div>
`;

exports[`ValidationSummary renders success icon when all istio components are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f6kk0cu"
      data-test="icon-correct-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-success"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders success icon when all istio components are valid 2`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f6kk0cu"
      data-test="icon-correct-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-success"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders success icon when all services are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f6kk0cu"
      data-test="icon-correct-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-success"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders warning icon when all istio components are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1wuzvd3"
      data-test="icon-warning-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-warning"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders warning icon when all istio components are valid 2`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1wuzvd3"
      data-test="icon-warning-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-warning"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders warning icon when all services are valid 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1wuzvd3"
      data-test="icon-warning-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-warning"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ValidationSummary renders warning icon when all services are valid 2`] = `
<div>
  <div
    style="display: contents;"
  >
    <span
      class="pf-v6-c-icon kiali_f1wuzvd3"
      data-test="icon-warning-validation"
    >
      <span
        class="pf-v6-c-icon__content pf-m-warning"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
